--- a/src/App.css
+++ b/src/App.css
@@ -66,3 +66,18 @@ body {
   background-color: #d1d2ff !important;
   color:#696cff !important;
 }
+
+.wrapper-light-class {
+  padding: 1rem;
+  border: 1px solid #ccc;
+}
+.editor-light-class {
+  /* background-color:lightgray; */
+  /* padding: 1rem; */
+  /* border: 1px solid #ccc; */
+  max-height: 100%;
+  overflow: auto;
+}
+.toolbar-light-class {
+  border: 1px solid #ccc;
+}
